--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@ body {
     font-family: 'Poppins', sans-serif !important;
     margin: 0;
     overflow-x: hidden !important;
+    background-color: #1b2029;
 }
 
 body::-webkit-scrollbar {
-    width: 12px;
+    width: 8px;
 }
 
 body::-webkit-scrollbar-track {
-    background: #e3e3e3;
+    background: none;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: rgb(112, 99, 194);
+    background-color: #5F7EB7;
     border-radius: 20px;
-    border: 3px solid #e3e3e3;
+    border: none;
 }
